--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -6,6 +6,12 @@ Author:	Janxcode
 /*------------------------------------------------------------------
 /* Note: Design for a width 1024 Desktop
 ================================================== */
+	@media only screen and (max-width: 1199px) {
+		header .jx-logo{
+		  padding-bottom: 12px;
+		}
+	}
+
 	@media only screen and (min-width: 960px) and (max-width: 1199px) {
 
 
